Fix footer social media links on mobile screens

--- a/src/scss/_components/_footer.scss
+++ b/src/scss/_components/_footer.scss
@@ -19,4 +19,21 @@ footer {
 
 .footer__media {
   text-align: center;/* No flexbox fallback to center social media list*/
+
+  .footer__links {
+    @media screen and (max-width: 460px) {
+      flex-wrap: wrap;
+    }
+  }
+
+  .list-divider {
+    display: none;
+
+    @media screen and (max-width: 460px) {
+      margin-top: remy(14px);
+      display: block;
+      width: 100%;
+      height: 1px;
+    }
+  }
 }
